force-app/main/default/objects/Ward_and_Private_Room__c/Ward_and_Private_Room__c.object-meta.xml
<CustomObject>
    <label>Wards and Private Room</label>
    <nameField>
        <label>Wards and Private Rooms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wards and Private Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>