force-app/main/default/objects/Ward_and_Private_Room__c/fields/Last_Time_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Cleaned__c</fullName>
    <label>Last Time Cleaned</label>
    <type>DateTime</type>
</CustomField>