force-app/main/default/objects/Ward_and_Private_Room__c/fields/PrimaryDoctor__c.field-meta.xml
<CustomField>
    <fullName>PrimaryDoctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Responsible Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Wards_and_Private_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>