force-app/main/default/objects/Ward_and_Private_Room__c/fields/PrimaryNurse__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Responsible Nurse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nurse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Wards_and_Private_Rooms1</relationshipName>
    <type>Lookup</type>
</CustomField>