force-app/main/default/objects/Ward_and_Private_Room__c/fields/Ward_and_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Ward_and_Room_Type__c</fullName>
    <label>Ward and Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
            </value>
            <value>
                <fullName>Admission</fullName>
            </value>
            <value>
                <fullName>Elderly Care</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Paediatrics</fullName>
            </value>
            <value>
                <fullName>Private Room</fullName>
            </value>
            <value>
                <fullName>Wound Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>