force-app/main/default/objects/Ward_and_Private_Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ward_and_Room_Type__c</columns>
    <columns>PrimaryDoctor__c</columns>
    <columns>PrimaryNurse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>